src/objects/DF_Contact_Intraction__c.object
<CustomObject>
    <fields>
        <fullName>DF_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>DF Contact</label>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>DF Contact Interactions</relationshipLabel>
        <relationshipName>DF_Contact_Interactions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_name__c</fullName>
        <label>Event name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_source__c</fullName>
        <label>Event source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>DF Contact Interaction</label>
    <nameField>
        <displayFormat>DFI-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DF Contact Interactions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>